  - added smarty blocks for voip account add template [maciejlew]
  - added smarty blocks for voip account edit template [maciejlew]
  - added smarty blocks for voip account info template [maciejlew]
  - added smarty blocks for voip account list template [maciejlew]
  - added number_of_table_columns variables at voip account list template that can be used by plugins [maciejlew]

version 1.11.17 (2015-06-29):

  - added support for radio sectors management in user interface [chilan]
  - fixed serious performance regression introduced by autoloader [chilan]
  - added radio sector management for network device links [chilan]
  - added license number and frequency for radio sectors [chilan]
  - added link technology and bandwidth support for radio sectors [chilan]
  - userpanel: we can enable/disable modules from lms user interface [chilan]
  - added connection type (PPPoE, DHCP, EAP) in nodes [nicraM Marcin Romanowski]
  - added network device selection from map [chilan]
  - added connection type (DHCP, EAP) in network device nodes [nicraM Marcin Romanowski]
  - move 'replace device" to popup for better netdevinfo/edit performance [maniac]
  - added visualisation of radio sectors on network device map [chilan]
  - added filter in network device list which allows to select device status
    and investment project to which device belong to [chilan]
  - added in debt above 100% and 200% filters in add message form [chilan]
  - adjustements to smarty versions above or equal 3.1.22 [chilan]
  - uke siis generator adjusted to earlier added radio sector feature [chilan]
  - daemon: ewx-pt module: fixed inproper mac content copying which caused segfaults
    on systems with newer system libraries [chilan]
  - daemon: ewx-pt module: don't remove hosts from ewx_pt_config sql table
    when host doesn't belong to any network defined by networks setting
    - in other words more sane multi ewx-pt instance support [chilan]