@@ -11,10 +11,10 @@
 </p>
 <TABLE class="lmsbox">
 	<COLGROUP>
+                {block name="customerlist-list-columns"}
 		<COL style="width: 97%;">
-		<COL style="width: 1%;">
-		<COL style="width: 1%;">
-		<COL style="width: 1%;">
+		<COL style="width: 1%;" span="4">
+                {/block}
 	</COLGROUP>
 	<THEAD>
         {block name="customerlist-list-header"}
